feat: upgrade Spring Boot 2.7.18 to 3.5.14
- Spring Boot: 2.7.18 -> 3.5.14
- javax.* -> jakarta.* migration (all modules)
- springdoc: 1.8.0 -> 2.8.17 (springdoc-openapi-starter-webmvc-ui)
- knife4j: knife4j-openapi3-jakarta-spring-boot-starter
- druid: druid-spring-boot-3-starter 1.2.28
- mybatis-plus: mybatis-plus-spring-boot3-starter 3.5.16
- dynamic-datasource: dynamic-datasource-spring-boot3-starter
- redisson: 3.52.0 -> 4.4.0
- flowable: 6.8.0 -> 7.2.0
- spring-boot-admin: 2.7.15 -> 3.5.8
- jimureport: jimureport-spring-boot3-starter 2.3.4
- jimubi: jimubi-spring-boot3-starter 2.3.2
- fesod -> fastexcel (cn.idev.excel)
- Remove tenant module dependency
- All modules compile successfully